fix fullscreen vertical alignment and move example into sub directory

--- a/css/video.css
+++ b/css/video.css
@@ -8,6 +8,7 @@
 
 .video-container video {
     width: 100%;
+    height: 100%;
 }
 
 .video-title {
